--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 # Site settings
-title: Jekyll-Uno
-description: 'Jekyll-Uno - a minimal, responsive theme for Jekyll'
-url: 'http://joshgerdes.com/jekyll-uno'
-baseurl: '/jekyll-uno'
+title: Study Machine Learning
+description: 'A portal for sharing Machine Learning Knowledge'
+url: 'www.studyml.in'
+baseurl: ''
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
 
 author:
-  name: 'Josh Gerdes'
-  email: josh@joshgerdes.com
-  twitter_username: joshgerdes
+  name: 'Vikas Jain'
+  email: vikasjain081291@live.comp
+  twitter_username: vikasja_in
   facebook_username: joshgerdes
-  github_username:  joshgerdes
+  github_username:  jainvikas
   linkedin_username:  joshgerdes
 
 defaults:
