added cv and instagram

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ disqus_shortname: 'vikasjain91'
 
 author:
   name: 'Vikas Jain'
-  email: vikasjain081291@live.comp
+  email: vikasjain081291@live.com
   twitter_username: vikasja_in
   facebook_username: vikasjain91
   github_username:  jainvikas
