--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,11 @@ disqus_shortname: 'vikasjain91'
 author:
   name: 'Vikas Jain'
   email: vikasjain081291@live.com
-  twitter_username: vikasja_in
+  twitter_username: vikasjain_91
   facebook_username: vikasjain91
   github_username:  jainvikas
   linkedin_username:  vikasjain91
-  instagram_username: vikasja.in
+  instagram_username: vikasjain_91
 
 defaults:
   -
