--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: 'A portal for sharing Machine Learning Knowledge'
 url: 'www.studyml.in'
 baseurl: ''
 # google_analytics: 'UA-XXXXXX-X'
-disqus_shortname: 'studyml'
+disqus_shortname: 'vikasjain91'
 
 author:
   name: 'Vikas Jain'
